--- a/src/main/webapp/resources/scss/main.scss
+++ b/src/main/webapp/resources/scss/main.scss
@@ -241,6 +241,11 @@
                             -webkit-box-orient: vertical;
                         }
                     }
+                    &:hover,
+                    &:focus {
+                        margin-bottom: -3px;
+                        border: 2px solid v.$color-green;
+                    }
                 }
             }
         }
