--- a/src/main/webapp/resources/css/reset.css
+++ b/src/main/webapp/resources/css/reset.css
@@ -4,6 +4,7 @@
 
 html, body {
 	height:100%;
+	min-height:100%;
 	min-height: 100%;
 	font-size: 16px;
 	color: #222;
@@ -104,7 +105,7 @@ button {
 }
 
 .wrapper {
-	height: 100%
+	/*  height: 100%*/
 }
 
 .btn-green {
